force-app/main/default/objects/Intake_Assignment_Rule__mdt/Intake_Assignment_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Intake Assignment Rule</label>
    <pluralLabel>Intake Assignment Rules</pluralLabel>
</CustomObject>