force-app/main/default/objects/Intake_Assignment_Rule__mdt/fields/Assign_To_Id__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Id__c</fullName>
    <label>Assign To Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>