force-app/main/default/objects/Intake_Assignment_Rule__mdt/fields/Assign_To_Type__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Type__c</fullName>
    <label>Assign To Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queue</fullName>
                <default>true</default>
                <label>Queue</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>