force-app/main/default/objects/Intake_Assignment_Rule__mdt/fields/Condition_Logic__c.field-meta.xml
<CustomField>
    <fullName>Condition_Logic__c</fullName>
    <label>Condition Logic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AND</fullName>
                <default>true</default>
                <label>AND</label>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>